# BS-ComputerMonitor

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SKILL.md  build.rs  plan.md
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/: app.rs  collector.rs  fps_collector.rs  icon_art.rs  main.rs  models.rs  ping_collector.rs  theme.rs  tray.rs
src/ui/: about.rs  cards.rs  mod.rs  titlebar.rs  widgets.rs
