[package]
name = "bs-computer-monitor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bs-computer-monitor"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.29"
egui_plot = "0.29"
sysinfo = "0.32"
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
wmi = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
