[package]
name = "bs-computer-monitor"
version = "1.96.9"
edition = "2021"

[[bin]]
name = "bs-computer-monitor"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.29"
egui_plot = "0.29"
sysinfo = "0.32"
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
wmi = "0.13"
# Same major version as wmi's transitive dep — Cargo unifies them, no double-compile.
windows = { version = "0.57", features = [
    "Foundation",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Time",
    "Win32_System_Performance",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
